<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signup.SignUp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:textStyle="italic"
        android:theme="@style/MyActionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:textColor="@color/black"

            android:textSize="22sp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_first_name"
            android:inputType="text"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_icon_customers"
            android:drawablePadding="15dip"
            android:singleLine="true"
            android:textColor="@color/input_login" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_last_name"
            android:inputType="text"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_icon_customers"
            android:drawablePadding="15dip"
            android:singleLine="true"
            android:textColor="@color/input_login" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/input_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/city"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_login" />

            <EditText
                android:id="@+id/zipcode"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="@string/hint_zipcode"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_login" />
        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:text="@string/next" />

        <!-- Link to Login Screen -->

    </LinearLayout>

</android.support.constraint.ConstraintLayout>