<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.creartarea">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Nueva tarea"
            android:textColor="@color/black"

            android:textSize="22sp" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:maxLines="1"

            android:drawablePadding="15dip"
            android:singleLine="true"
            android:textColor="@color/input_login" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_desc"
            android:inputType="text"
            android:maxLines="1"
            android:drawablePadding="15dip"
            android:singleLine="true"
            android:textColor="@color/input_login" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/input_login" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/Duracion"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/input_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText

                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_login" />

            <EditText

                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="@string/hint_zipcode"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_login" />
        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:text="Crear" />

        <!-- Link to Login Screen -->

    </LinearLayout>


</FrameLayout>