<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signin.Login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:textStyle="italic"
        android:theme="@style/MyActionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/body_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493">

        <ImageView
            android:layout_width="146dp"
            android:layout_height="145dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:cropToPadding="false"
            android:src="@mipmap/logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_email_84"
            android:drawablePadding="15dip"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textColor="@color/input_login" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_union_49"
            android:drawablePadding="15dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/input_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/olvidopass"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:gravity="right"
                android:textSize="16sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_login" />
        <TextView
            android:id="@+id/title_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nocuenta"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/bg_register"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/title_text_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevacuenta"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>